--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "tone": "^14.7.77"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.8",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "autoprefixer": "^10.4.21"
   }
 }
