--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tone": "^14.7.77"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
