--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@tailwindcss/postcss": "^4.1.8",
     "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
+    "browserify-fs": "^1.0.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.5.4",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.17",
+    "util": "^0.12.5",
     "vite": "^4.0.0"
   }
 }
