--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.7.2",
     "tone": "^14.7.77"
